# SSChat

./: .gitignore  .gitmodules  LICENSE  README.md
code/client/: readme.txt
code/client/Object-C/: NSMessage.h  NSTextMessage.h  NSTextMessage.m  NSUser.h  NSUser.m
code/client/Object-C/SSIMMessage/SSIMMessage/: AppDelegate.h  NSError.h  NSLoginMessage.m  NSMessage.h  NSMessage.m  NSMessageFactory.h  NSMessageFactory.m  NSUser.m  ViewController.h  ViewController.m
code/client/Object-C/SSIMMessage/SSIMMessage.xcodeproj/: project.pbxproj
code/client/Object-C/SSIMMessage/SSIMMessage/Base.lproj/: Main.storyboard
code/client/Object-C/SSIMMessage/SSIMMessage/NSMessage/: NSInstantMessage.h  NSInstantMessage.m  NSLoginMessage.m  NSMessage.m
code/client/Object-C/SSIMMessage/SSNSDK.framework/: Info.plist  SSNSDK
code/client/Object-C/SSIMMessage/SSNSDK.framework/Headers/: NSDataUtil.h  NSSocketManager.h  SSNSDK.h
code/client/Object-C/SSIMMessage/SSNSDK.framework/Modules/: module.modulemap
code/client/Swift/SSIMMessage/SSIMMessage/: ViewController.swift
code/include/: package.hpp  ssim_server_interface.h  ssimdef.h
code/src/client/Object-C/SSIMMessage/SSIMMessage/: AppDelegate.m  ViewController.m  main.m
code/src/client/Object-C/SSIMMessage/SSIMMessage.xcodeproj/: project.pbxproj
code/src/client/Tester/SimpleTester/: SimpleTester.sln
code/src/service/: CMakeLists.txt
code/src/service/msg_persistent/: CMakeLists.txt  db.sql  msg_persistent.cpp  msg_persistent.h
code/src/service/msg_process/: CMakeLists.txt  msg_process.cpp  msg_process.h
code/src/service/msg_route/: CMakeLists.txt  msg_route.cpp  msg_route.h  ts_queue.hpp
code/src/service/network/: CMakeLists.txt  network.cpp  network.h  session.cpp  session.h
code/src/service/src/: main.cpp
doc/: SSIM.docx  ~$SSIM.docx  ~$服务端设计.docx  服务端设计.docx
(+16 files in other folders)
